--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.font {
+@font-face {
   font-family: Passion One;
-  font-size: 20px;
+  src: url("../fonts/PassionOne-Black.ttf") format(truetype);
 }
-.navbar {
-  display: flex;
-  align-items: center;
-  padding: 20px;
+h1 {
+  font-family: Passion -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Ubuntu, "Open Sans", "Helvetica Neue", sans-serif;
 }
-nav {
-  flex: 1;
-  text-align: right;
-}
-nav ul {
-  display: inline;
-  list-style-type: none;
-}
-nav ul li {
+.navigation {
   display: inline-block;
-  margin-right: 20px;
-}
-.container {
-  max-width: 1300px;
-  margin: auto;
-  padding-left: 25px;
-  padding-right: 25px;
-}
-.home1 {
-  display: flex;
-  align-items: left;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  flex-basis: 40%;
-  min-width: 300px;
-  max-width: 100%;
-  padding: 50px;
+  list-style-type: none;
 }
