--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,76 @@
-@font-face {
-  font-family: Passion One;
-  src: url("../fonts/PassionOne-Black.ttf") format(truetype);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-h1 {
-  font-family: Passion -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Open Sans", "Helvetica Neue", sans-serif;
+body {
+  font-family: "Passion One", cursive;
+  font-family: "Roboto", sans-serif;
 }
-.navigation {
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+nav {
+  flex: 1;
+  text-align: right;
+}
+nav ul {
   display: inline-block;
   list-style-type: none;
 }
+nav ul li {
+  display: inline-block;
+  margin: 20px;
+}
 a {
-  display: inline;
-  list-style-type: none;
+  text-decoration: none;
+  color: #000;
+}
+p {
+  color: #000;
+}
+.container {
+  max-width: 1300px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.col-2 {
+  flex-basis: 50%;
+  min-width: 300px;
+}
+.col-2 img {
+  max-width: 100%;
+  padding: 50px 0;
+}
+.col-2 h1 {
+  font-size: 50px;
+  line-height: 60px;
+  margin: 25px 0;
+}
+.cta {
+  display: inline-block;
+  background: #037f8c;
+  color: #ffffff;
+  padding: 8px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+}
+header {
+  background-color: #add3dc;
+}
+header .row {
+  margin-top: 70px;
+}
+.icon {
+  width: 30px;
+  height: 30px;
 }
