--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+img {
+  width: 100%;
+}
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +23,8 @@ nav ul {
   display: inline-block;
   list-style-type: none;
 }
-nav ul li {
+nav ul li,
+.icon {
   display: inline-block;
   margin: 20px;
 }
@@ -63,12 +67,19 @@ p {
   padding: 8px 30px;
   margin: 30px 0;
   border-radius: 30px;
+  transition: background 0.5s;
+}
+.cta :hover {
+  background: #000;
 }
 header {
   background-color: #add3dc;
 }
 header .row {
   margin-top: 70px;
+}
+.logo {
+  width: 125px;
 }
 .icon {
   width: 30px;
