--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ nav ul {
   list-style-type: none;
 }
 nav ul li,
-.icon {
+.icon,
+.menu-icon {
   display: inline-block;
   margin: 20px;
 }
@@ -67,7 +68,7 @@ p {
   padding: 8px 30px;
   margin: 30px 0;
   border-radius: 30px;
-  transition: background 0.5s;
+  transition: background-color 0.5s;
 }
 .cta :hover {
   background: #000;
@@ -81,7 +82,278 @@ header .row {
 .logo {
   width: 125px;
 }
-.icon {
+.icon,
+.menu-icon {
   width: 30px;
   height: 30px;
+}
+.menu-icon img {
+  width: 100%;
+  display: inline-block;
+}
+.categories {
+  margin: 70px 0;
+}
+.col-3 {
+  flex-basis: 30%;
+  min: width 150px;
+  margin-bottom: 30px;
+}
+.col-3 img {
+  width: 100%;
+}
+.small container {
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.col-4 {
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 150px;
+  margin-bottom: 50px;
+  transition: transform cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.col-4 img {
+  width: 100%;
+}
+.title {
+  text-align: center;
+  margin: 0 auto 80px;
+  position: relative;
+  line-height: 60px;
+  color: #000;
+}
+.title ::after {
+  content: "";
+  background: #037f8c;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+h3 {
+  color: #037f8c;
+  font-weight: bold;
+}
+.col-4 p {
+  font-size: 20px;
+}
+.rating .fa {
+  color: #000;
+}
+.col-4:hover {
+  transform: translateY(-5px);
+}
+/*footer*/
+.footer {
+  background: #037f8c;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 60px 0 20px;
+}
+.footer p {
+  color: #ffffff;
+}
+.footer h4 {
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.footer-col-1,
+.footer-col-2,
+.footer-col-3,
+.footer-col-4 {
+  min-width: 250px;
+  margin-bottom: 20px;
+}
+.footer-col-1 {
+  flex-basis: 30%;
+}
+.footer-col-2 {
+  flex: 1;
+  text-align: center;
+}
+.footer-col-2 img {
+  width: 125px;
+  margin-bottom: 20px;
+}
+.footer-col-3,
+.footer-col-4 {
+  flex-basis: 9%;
+  text-align: center;
+}
+ul {
+  list-style-type: none;
+}
+.app-logo {
+  width: 20px;
+  height: 20px;
+}
+.app-logo img {
+  display: inline-block;
+  width: 100%;
+  padding-top: 20px;
+}
+.copyright {
+  text-align: center;
+}
+
+/*media query for menu*/
+@media only screen and (max-width: 800px) {
+  nav ul {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background: #037f8c;
+    width: 100%;
+    overflow: hidden;
+    transition: max-height 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  nav ul li a {
+    color: #ffffff;
+  }
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+}
+/*all products*/
+.row-2 {
+  justify-content: space-between;
+  margin: 100px auto 50px;
+}
+select {
+  border: 1px solid #000;
+  padding: 5px;
+}
+.page-cta {
+  margin: 0 auto 80px;
+}
+.page-cta span {
+  display: inline-block;
+  border: 1px solid #000;
+  margin-left: 10px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+}
+.page-cta span:hover {
+  background: #037f8c;
+  color: #ffffff;
+}
+/*single product detail*/
+.single-product {
+  margin-top: 50px;
+}
+.single-product .col-2 img {
+  padding: 0;
+}
+.single-product .col-2 {
+  padding: 20px;
+}
+.single-product h2 {
+  margin: 20px 0;
+  font-size: 25px;
+  font-weight: bold;
+}
+.single-product select {
+  display: block;
+  padding: 10px;
+  margin-top: 20px;
+}
+.single-product input {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  margin-right: 10px;
+  border: 1px solid #000;
+}
+/*account*/
+.account {
+  padding: 50px 0;
+  background: #037f8c;
+}
+.form-container {
+  background: #ffffff;
+  width: 300px;
+  height: 400px;
+  position: relative;
+  text-align: center;
+  margin-left: 150px;
+  padding: 20px 0;
+  box-shadow: 0 0 20px 0px;
+}
+.form-container span {
+  font-weight: bold;
+  padding: 0 10px;
+  color: #000;
+  cursor: pointer;
+  width: 100px;
+  display: inline-block;
+}
+.form-cta {
+  display: inline-block;
+}
+.form-container form {
+  max-width: 300px;
+  padding: 0 20px;
+  position: absolute;
+  top: 130px;
+}
+form input {
+  width: 100%;
+  height: 30px;
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #000;
+}
+form .cta {
+  width: 100%;
+  cursor: pointer;
+  margin: 10px 0;
+}
+form .cta:focus {
+  outline: none;
+}
+#LoginForm {
+  left: -300px;
+}
+#RegistrationForm {
+  left: 0;
+}
+form a {
+  font-size: 12px;
+}
+.aboutus {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.aboutus h2 {
+  text-align: left;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+/*media query for less than 600 screen size*/
+@media only screen and (max-width: 600px) {
+  .row {
+    text-align: center;
+  }
+  .col-2,
+  .col-3,
+  .col-4 {
+    flex-basis: 100%;
+  }
 }
